plugins {
    id 'java'
    id 'io.quarkus'
    id "io.freefair.lombok" version "9.5.0"
}

group 'com.ebp.openQuarterMaster'
version '1.19.2'

repositories {
    mavenCentral()
    mavenLocal()
    //allow pulling snapshots for oqm core api lib
    maven({url= "https://central.sonatype.com/repository/maven-snapshots/"})
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-rest-qute'
    implementation 'io.quarkus:quarkus-rest-csrf'
    implementation 'io.quarkus:quarkus-rest-client'
    implementation 'io.quarkus:quarkus-rest-client-jackson'
    implementation 'io.quarkus:quarkus-oidc'
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation 'io.quarkus:quarkus-smallrye-health'
    implementation 'io.quarkus:quarkus-container-image-docker'
    implementation 'io.quarkus:quarkus-hibernate-validator'
    implementation 'io.quarkus:quarkus-smallrye-openapi'
    implementation 'io.quarkus:quarkus-micrometer-opentelemetry'
    implementation 'io.quarkus:quarkus-scheduler'

    implementation 'tech.epic-breakfast-productions.openquartermaster.lib.core:core-characteristics-lib-quarkus:1.1.1-SNAPSHOT'
    implementation 'tech.epic-breakfast-productions.openquartermaster.lib.core:core-api-lib-quarkus:6.1.0'

    implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'org.apache.commons:commons-text:1.15.0'

    implementation 'uk.org.okapibarcode:okapibarcode:0.5.6'
    implementation 'com.itextpdf:html2pdf:6.3.2'

    implementation 'org.knowm.xchart:xchart:4.0.2'

    //webjars
    implementation 'org.webjars:jquery:4.0.0'
    implementation 'org.webjars:bootstrap:5.3.8'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation "org.junit.jupiter:junit-jupiter-params:6.1.0"
    testImplementation 'io.rest-assured:rest-assured'
    testImplementation 'net.datafaker:datafaker:2.6.0'

    testImplementation 'com.microsoft.playwright:playwright:1.60.0'
    testImplementation 'com.deque.html.axe-core:playwright:4.12.0'
}

java {
    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(25))
        }
    }
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}

/**
 * Used to print the current version of this project.
 *
 * Used by the `makeInstallers.sh` script to get the version.
 */
tasks.register('printVersion') {
    doLast {
        println project.version
    }
}
